Fix overflow issue

--- a/src/styles/blocks/page.css
+++ b/src/styles/blocks/page.css
@@ -18,4 +18,5 @@
 	display: grid;
 	grid-template-rows: auto 1fr auto;
 	margin: 0;
+	overflow-wrap: anywhere;
 }
